--- a/source/css/_common/components/sidebar/sidebar-author.styl
+++ b/source/css/_common/components/sidebar/sidebar-author.styl
@@ -5,6 +5,9 @@
   height: auto;
   border: 2px solid #333;
   padding: 2px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 }
 
 .site-author-name {
